# astronomical-matching

./: .gitignore  CanILP + DirILP General case.ipynb  Makefile  README.md  benchmark.ipynb  constants.py  cop2.prof  cop_kmeans.prof  cop_kmeans.py  examples.ipynb  gen_plots.ipynb  getRuntimes.py  hubble.ipynb  hubble_query.md  large_test.py  matches.txt  matching.py  mockimg.ipynb  pyproject.toml  runtime-all-max_k_10.csv  runtime-all-max_k_2.csv  runtime-all-max_k_4.csv  runtime-all.csv  runtime-distance.csv  runtime-miqcp-sterling.csv  runtimes2.csv  runtimes3.csv  simulate.py  single_linkage_heuristic.py  tune0.prm  tune1.prm  utils.py
astronomical_matching/: chainbreaker.py  constants.py  cop_kmeans.py  dirilp.py  kmeans.py  miqcp.py  simulate.py  utils.py
astronomical_matching/approximate/: __init__.py  chainbreaker.py  cop_kmeans.py  kmeans.py
astronomical_matching/exact/: dirilp.py  miqcp.py
data/: match_4000710334517.csv  match_6000160767697.csv  match_6000204755575.csv  small_matches.csv
runtimes/: runtime-capped.csv  runtime-copkmeans.csv  runtimes.csv  setuptime1.csv
runtimes_old/runtimes/: runtime-sigma.csv
