[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'astronomical_matching'
version = "0.1.dev0"
description = 'Astronomical Cross Matching: Collection of algorithms to solve the astronomical cross matching problem.'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '~=3.11'
maintainers = [
    {name = 'Jacob Feitelberg', email = 'jef2182@columbia.edu'},
]
keywords = [
    'Bayes factor',
    'MIQCP',
    'COP-KMeans',
    'Cross-Matching',
]
classifiers = [
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.11',
    'Natural Language :: English',
    'License :: OSI Approved :: BSD License',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
]
dependencies = [
    'numpy >= 1.21',
    'scipy >= 1.2.0',
    'pandas',
]

[project.optional-dependencies]
build = [
    'build',
    'twine',
]
style = [
    'bibclean',
    'black',
    'isort',
    'flake8',
    'mypy',
    'pydocstyle[toml]',
]
test = [
    'pytest',
    'pytest-cov',
]
full = [
    'astronomical_matching[build]',
    'astronomical_matching[style]',
    'astronomical_matching[test]',
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['astronomical_matching*']
exclude = ['astronomical_matching*tests']